Bug 1657322 - fix Crash in [@ InvalidArrayIndex_CRASH | nsMessenger::SaveAllAttachments]. r=benc